# bluehook

./: .gitignore  Cargo.toml  README.md
bluelib/: Cargo.toml
bluelib/src/: lib.rs
commander/: Cargo.toml  package.json
commander/src/: main.js  main.rs  nodes.html
commander/src-tauri/: Cargo.toml  tauri.conf.json
commander/src-tauri/src/: main.rs
hook/: Cargo.toml
hook/src/: alerts.rs  args.rs  auth.rs  capabilities.rs  fail2ban.rs  firewall.rs  holes.rs  log.rs  main.rs  reboot.rs  software.rs  ssh.rs  sysinfo.rs  validation.rs
