[package]
name = "commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.20", features = ["derive"]}
actix-web = {version = "4"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bluelib = {version = "0.1.0", path = "../bluelib"}