[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.20", features = ["derive"]}
actix-web = {version = "4"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
os_info = { version = "3", default-features = false }
bluelib = {version = "0.1.0", path = "../bluelib"}
system_shutdown = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
linemux = "0.2"
[target.'cfg(unix)'.dependencies]
nix = "0.25.0"